# PysideChair

./: .gitignore  README.md  main.py  main_window.py  pyproject.toml
.github/workflows/: codeql.yml
assets/chair/: qtchair_rc.py
assets/weather/: weather.qrc  weather_rc.py
components/cards/: heart.py  link.py  sample.py
config/: __init__.py  config.example.toml
core/: security.py  signals.py
core/builtins/: assigned_element.py  elements.py  message_constructors.py
core/pydantic_models/: __init__.py
core/utils/: __init__.py
core/ws_connect/: __init__.py
interfaces/: heart.py  home.py  settings.py  video.py  weather.py
interfaces/accounts/: logged_in.py  login.py  register.py
